nextcloud-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: example-ing
spec:
    ingressClassName: nginx
    rules:
      - host: omarhola.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: nextcloud-svc
                  port:
                    number: 80
              path: /
